--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <title>Paleta de Cores</title>
 </head>
 <body>
-    <title>
+    <header>
         <h1 id="title">Paleta de Cores</h1>
-    </title>
+    </header>
+
 
  <script type="text/javascript" src="script.js"></script>
 </body>
