--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
   <title>Project Pixels Art</title>
 </head>
 <body>
-  
+  <header id="title">
+    <h1>Paleta de Cores</h1>
+  </header>
+  <sectioin id="color-palette">
+    <div class="color"></div>
+    <div class="color"></div>
+    <div class="color"></div>
+    <div class="color"></div>
+  </sectioin>
   <script src="script.js"></script>
 </body>
 </html>
