--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
   <title>Document</title>
 </head>
 <body>
-  <h1 i = "title">Paleta de Cores</h1>
+  <header>
+    <h1 i = "title">Paleta de Cores</h1>
+  </header>
+  <section id = "color-palette">
+    <div class = "color paletteOne"></div>
+    <div class = "color paletteTwo"></div>
+    <div class = "color paletteThree"></div>
+    <div class = "color paletteFour"></div>
+
+  </section>
   <script src = "script.js"></script>
 </body>
 </html>
