--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Paleta de Cores</h1>
+  <h1 id="title">Paleta de Cores</h1>
+  <main id="main-content">
+    <section id="color-palette">
+      <div class="color"></div>
+      <div class="color"></div>
+      <div class="color"></div>
+      <div class="color"></div>
+    </section>
 
+    <section id="pixels-container">
 
+    </section>
+
+  </main>
   <script src="script.js"></script>
 </body>
 </html>
