--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 <body>
   <h1 id="title">Paleta de Cores</h1>
+  <div id=color-palette>
+    <div id="box1" class="color"></div>
+    <div id="box2" class="color"></div>
+    <div id="box3" class="color"></div>
+    <div id="box4" class="color"></div>
+  </div>
 
   <script src='script.js'></script>
 </body>
