requisito 3 concluido. Ajustei alguns detalhes de nomenclatura

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1 i = "title">Paleta de Cores</h1>
+    <h1 id = "title">Paleta de Cores</h1>
   </header>
   <section id = "color-palette">
     <div class = "color paletteOne"></div>
