--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projeto Pixels Art</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1 id="title">Paleta de Cores</h1>
+    <h1 id='title'>Paleta de Cores</h1>
   </header>
+  <div id='color-palette'>
+    <div class='color'>teste</div>
+    <div class='color'>teste</div>
+    <div class='color'>teste</div>
+    <div class='color'>teste</div>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
