estilizando paleta de cores

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <h1>Paleta de Cores</h1>
   </header>
   <sectioin id="color-palette">
-    <div class="color"></div>
-    <div class="color"></div>
-    <div class="color"></div>
-    <div class="color"></div>
+    <div class="color black"></div>
+    <div class="color blue"></div>
+    <div class="color red"></div>
+    <div class="color green"></div>
   </sectioin>
   <script src="script.js"></script>
 </body>
