--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Pixerls Art - @vanellijoao</title>
 </head>
 <body>
-    <h1 id="tilte">Paleta de Cores</h1>
+    <h1 id="title">Paleta de Cores</h1>
+
+    <div id="color-palette">
+        <div class="color black"></div>
+        <div class="color second-color"></div>
+        <div class="color third-color"></div>
+        <div class="color fourth-color"></div>
+    </div>
 </body>
 </html>
