--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Triangle</title>
+  <title>Project Pixel Art</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
-
-
-
+  <header>
+    <h1 id = "Title">Paleta de Cores</h1>
+  </header>
+  <section id='color-palette' class="section-palette"></section>
+  <section id='pixel-board' class="section-board"></section>
+  <script src='script.js'></script>
 </body>
 </html>
