--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Projeto Pixels Art</title>
 </head>
 <body>
-    
+    <h1 id="title">Paleta de Cores</h1>
     <script src="/script.js"></script>
 </body>
 </html>
