First task title

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <title>Paleta de Cores</title>
 </head>
-  <h1 id="title">Leitor</h1>
+  <h1 id="title">Paleta de Cores</h1>
 <body>
+    <section>
 
+    </section>
 </body>
 </head>
 </html>
