--- a/index.html
+++ b/index.html
@@ -9,8 +9,15 @@
 </head>
 <body>
     <h1 id="title">Paleta de Cores</h1>
-
-
+    <p>Preto</p>
+    <p>Roxo</p>
+    <p>Amarelo</p>
+    <p>Verde</p>
+    <br>
+    <div id="color-palette" class='color1'></div>
+    <div id="color-palette" class='color2'></div>
+    <div id="color-palette" class='color3'></div>
+    <div id="color-palette" class='color4'></div>
 
     <script type='text/javascript' href='script.js'></script>
 </body>
