add paleta de cores

--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <h1 id="title">Paleta de Cores</h1>
+
+    <div id="color-palette">
+        <div class="tr">
+            <div id="paleta1" class="color"></div>
+            <div id="paleta2" class="color"></div>
+            <div id="paleta3" class="color"></div>
+            <div id="paleta4" class="color"></div>
+    </div>
     
-    <script src="myscripts.js"></script>   
+    <script src="script.js"></script>   
 </body>
 </html>
