--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
     <header>
         <h1 id="title">Paleta de Cores</h1>
     </header>
+    <div id="color-palette">
+        <div class="color" id="color1"></div>
+        <div class="color" id="color2"></div>
+        <div class="color" id="color3"></div>
+        <div class="color" id="color4"></div>
+    </div>
 </body>
 </html>
