--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Paleta de Cores</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <h1 id="title">Paleta de Cores</h1>
     <p>Preto</p>
     <p>Roxo</p>
     <p>Amarelo</p>
     <p>Verde</p>
-    <br>
-    <div id="color-palette" class='color1'></div>
-    <div id="color-palette" class='color2'></div>
-    <div id="color-palette" class='color3'></div>
-    <div id="color-palette" class='color4'></div>
+    <br />
+    <div id="color-palette">
+      <div class="color color1"></div>
+      <div class="color color2"></div>
+      <div class="color color3"></div>
+      <div class="color color4"></div>
+    </div>
 
-    <script type='text/javascript' href='script.js'></script>
-</body>
+    <script type="text/javascript" href="script.js"></script>
+  </body>
 </html>
