--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project Pixel Art</title>
+  <title>Paleta de Cores</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <script type="text/javascript" src="script.js"></script>
 </head>
@@ -11,8 +11,11 @@
   <header>
     <h1 id = "Title">Paleta de Cores</h1>
   </header>
-  <section id='color-palette' class="section-palette"></section>
-  <section id='pixel-board' class="section-board"></section>
-  <script src='script.js'></script>
+  <div id="color-palette">
+    <div class="color" id="Preto"></div>
+    <div class="color" id="Vermelho"></div>
+    <div class="color" id="Azul"></div>
+    <div class="color" id="Verde"></div>
+  </div>
 </body>
 </html>
