--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 </head>
 <body>
   <h1 id = 'title'>Paleta de Cores</h1>
-  <script src="script.js"></script>
+  <section id ='color-palette'>
+    <div class="color"></div>
+    <div class="color"></div>
+    <div class="color"></div>
+    <div class="color"></div>
+
+
+    <script src="script.js"></script>
 </body>
 </html>
