--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Paleta de Cores</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <title>Paleta de Cores</title>
 </head>
 <body>
-    <h1 id="title">Paleta de Cores</h1>
-    <script type="text/javaScript" src="script.js"></script>  
+  <h1 id="title">Paleta de Cores</h1>
+  <div class="display-table">
+    <div id="color-palette">
+        <div id="c1" class="color"></div>
+        <div id="c2" class="color"></div>
+        <div id="c3" class="color"></div>
+        <div id="c4" class="color"></div>
+    </div>    
+</div>
+
+
+  <script type="text/javaScript" src="script.js"></script>  
 </body>
 </html>
