--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <h1 id = "Title">Paleta de Cores</h1>
   </header>
   <div id="color-palette">
-    <div class="color" id="Preto"></div>
-    <div class="color" id="Vermelho"></div>
-    <div class="color" id="Azul"></div>
-    <div class="color" id="Verde"></div>
+    <div class="color" id="preto"></div>
+    <div class="color" id="vermelho"></div>
+    <div class="color" id="azul"></div>
+    <div class="color" id="verde"></div>
   </div>
 </body>
 </html>
