--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
   <header>
     <h1 id="title">Paleta de Cores</h1>
   </header>
+
+  <main>
+    <section id="color-palette">
+      <div class="color"></div>
+      <div class="color"></div>
+      <div class="color"></div>
+      <div class="color"></div>
+    </section>
+  </main>
   
   <script src="script.js"></script>
 </body>
