Correção deo exercício um

--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
 </head>
 <body>
   <header>
-    <h1 class="title">Paleta de Cores</h1>
+    <h1 id="title">Paleta de Cores</h1>
   </header>
+  <section>
+    <div id="color-palette">
+      <div class="color"></div>
+      <div class="color"></div>
+      <div class="color"></div>
+      <div class="color"></div>
+    </div>
+  </section>
   
 </body>
 </html>
