--- a/index.html
+++ b/index.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pixels Art | Gustavo Cerqueira</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="script.js" defer></script>
-</head>
-<body>
-  <h1 id="title">Paleta de Cores</h1>
-  <table>
-    <tr id="color-palette">
-      <td class="color"></td>
-      <td class="color"></td>
-      <td class="color"></td>
-      <td class="color"></td>
-    </tr>
-  </table>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pixels Art | Gustavo Cerqueira</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
+  </head>
+  <body>
+    <h1 id="title">Paleta de Cores</h1>
+    <section id="color-palette"></section>
+
+    <section id="pixel-board"></section>
+  </body>
 </html>
