--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <div class="color"></div>
         <div class="color"></div>
     </div>
+    <table id="pixel-board">       
+    </table>
     <script src="script.js"></script>
 </body>
 </html>
