--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>Project Pixels Art</title>
 </head>
 <body>
+  <header>
+    <h1 id="title">Paleta de Cores</h1>
+  </header>
   
   <script src="script.js"></script>
 </body>
