--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 <body>
     <h1 id="title">Paleta de Cores</h1>
+    <div id="color-palette">
+        <div class="color div1"></div>
+        <div class="color div2"></div>
+        <div class="color div3"></div>
+        <div class="color div4"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
