--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 <body>
   <h1 id="title">Paleta de Cores</h1>
+  <section id="color-palette">
+    <div class="color"></div>
+    <div class="color"></div>
+    <div class="color"></div>
+    <div class="color"></div>
+  </section>
   <!-- <div class="display-table">
     <div>
         <div>0, 0</div>
