--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1 id = "Title">Paleta de Cores</h1>
   </header>
   <div id="color-palette">
-    <div class="color" id="preto"></div>
+    <div class="color selected" id="preto"></div>
     <div class="color" id="vermelho"></div>
     <div class="color" id="azul"></div>
     <div class="color" id="verde"></div>
