--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <script type="text/javascript" src="script.js"></script>
   <title>Document</title>
 </head>
 <body>
   <h1 id="title">Paleta de Cores</h1>
+  <div id="color-palette">
+    <div class="color black"></div>
+    <div class="color red"></div>
+    <div class="color blue"></div>
+    <div class="color green"></div>
+  </div>
 </body>
 </html>
