--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     </section>
 
-    <div class="table">
+    <section >
       <div id="pixel-board">
         <div class="pixel"></div>
         <div class="pixel"></div>
@@ -27,37 +27,48 @@
         <div class="pixel"></div>
         <div class="pixel"></div>
       </div>
-      <div id="pixel-board">
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-      </div>
-      <div id="pixel-board">
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-      </div>
-      <div id="pixel-board">
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-      </div>
-      <div id="pixel-board">
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-      </div>
-    </div>  
+    </section>  
 
-    
+    <section >
+        <div id="pixel-board">
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+        </div>
+      </section>
+
+      <section >
+          <div id="pixel-board">
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+            <div class="pixel"></div>
+          </div>
+        </section>    
+
+        <section >
+            <div id="pixel-board">
+              <div class="pixel"></div>
+              <div class="pixel"></div>
+              <div class="pixel"></div>
+              <div class="pixel"></div>
+              <div class="pixel"></div>
+            </div>
+          </section>    
+
+        <section >
+              <div id="pixel-board">
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+                <div class="pixel"></div>
+              </div>
+            </section>
+
     <section class="boardline">
       <div id="pixel-board" class="pixel-board"></div>
     </section>
