--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 id="title">Paleta de Cores</h1>
 
     <ul id="color-palette">
-        <li class="color"></li>
+        <li class="color selected"></li>
         <li class="color"></li>
         <li class="color"></li>
         <li class="color"></li>
