--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
 </head>
 <body>
     <h1 id="title">Paleta de Cores</h1>
+
+    <div id="color-palette">
+        <div class="black"></div>
+        <div class="greenyellow"></div>
+        <div class="blue"></div>
+        <div class="red"></div>        
+    </div>
     
+    <div id="pixel-board">
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
