--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
 <body>
@@ -12,10 +13,10 @@
   </header>
   <section>
     <div id="color-palette">
-      <div class="color"></div>
-      <div class="color"></div>
-      <div class="color"></div>
-      <div class="color"></div>
+      <div id="black" class="color"></div>
+      <div id="blue" class="color"></div>
+      <div id="red" class="color"></div>
+      <div id="green" class="color"></div>
     </div>
   </section>
   
