Adiciona resolução ao requisito 2

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 
 <body>
     <h1 id="title">Paleta de Cores</h1>
+    <div id="color-palette">
+        <div class="color" id="firstColor"></div>
+        <div class="color" id="secondColor"></div>
+        <div class="color" id="thirdColor"></div>
+        <div class="color" id="fourthColor"></div>
+    </div>
 
 </body>
 
