4-add pagina um quadro de pixel 25px

--- a/index.html
+++ b/index.html
@@ -15,17 +15,44 @@
     <div class="color"></div>
     <div class="color"></div>
   </section>
-  <!-- <div class="display-table">
+  <div class="pixel-board">
     <div>
-        <div>0, 0</div>
-        <div>0, 1</div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
     </div>
     <div>
-        <div>1, 0</div>
-        <div>1, 1</div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
     </div>
-</div>
- -->
+    <div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+    </div>
+    <div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+    </div>
+    <div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+      <div class="pixel"></div>
+    </div>
+  </div>
+
   <script src="/script.js"></script>
 </body>
 </html>
