--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Pixels Art Project</title>
   </head>
   <body>
-    <main>
+    <main class="container">
       <section id="color-palette">
         <h1 id="title">Paleta de Cores</h1>
         <div class="color" id="black"></div>
@@ -16,6 +16,8 @@
         <div class="color" id="green"></div>
         <div class="color" id="blue"></div>
       </section>
+
+      <section id="pixel-board"></section>
     </main>
   </body>
 </html>
