--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
     <div id="paletteYellow" class="color"></div>
     <div id="paletteBlue" class="color"></div>
   </div>
+  <table id="pixel-board">
+  </table>
+  <script src="script.js"></script>
 </body>
 </html>
