--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 id="title">Paleta de Cores</h1>
 
     <div id="color-palette">
-        <div class="color black"></div>
+        <div class="color black selected"></div>
         <div class="color second-color"></div>
         <div class="color third-color"></div>
         <div class="color fourth-color"></div>
