--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
     <div class = "color paletteTwo"></div>
     <div class = "color paletteThree"></div>
     <div class = "color paletteFour"></div>
-
   </section>
+  <div id = "pixel-board">
+
+  </div>
   <script src = "script.js"></script>
 </body>
 </html>
