--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Paleta de Cores</title>
 </head>
 <body>
+  <header>
+    <h1 id="title">Paleta de Cores</h1>
+  </header>
+  <table>
+    <tr><td>1</td><td>2</td><td>3</td></tr>
+    <tr><td>4</td><td>5</td><td>6</td></tr>
+    <tr>44</tr>
+    <tr>55</tr>
+  </table>
   
 </body>
 </html>
