--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
     <header>
         <h1 id="title">Paleta de Cores</h1>
     </header>
+    <main>
+        <div id="color-palette">
+            <div class="color" id="black">
+            </div> 
+            <div class="color">
+            </div>
+            <div class="color">
+            </div>
+            <div class="color">
+            </div>
+        </div>
+    </main>
 
 
  <script type="text/javascript" src="script.js"></script>
