--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="color"></div>
     <div class="color"></div>
   </div>
-  <table id="pixel-board"></table>
+  <table cellspacing="0" id="pixel-board"></table>
   <script src="script.js"></script>
 </body>
 </html>
