--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
 </head>
 
 <body>
-  <header>
-    <h1 id="title">Paleta de Cores</h1>
-  </header>
-  <div id="color-pallete">
+  <h1 id="title">Paleta de Cores</h1>
+  <div id="color-palette">
     <div id="color-black" class="color"></div>
     <div id="color-green" class="color"></div>
     <div id="color-red" class="color"></div>
