criando quadro de pixels

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <title>Project Pixels Art</title>
 </head>
-<body>
+<body>  
   <header id="title">
     <h1>Paleta de Cores</h1>
   </header>
@@ -17,6 +17,7 @@
     <div class="color red"></div>
     <div class="color green"></div>
   </sectioin>
+  <section id="pixel-board"></section>
   <script src="script.js"></script>
 </body>
 </html>
