--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <h1 id="title">Paleta de Cores</h1>
   <div id="color-palette">
-    <div id="paletteBlack" class="color"></div>
+    <div id="paletteBlack" class="color selected"></div>
     <div id="paletteGreen" class="color"></div>
     <div id="paletteYellow" class="color"></div>
     <div id="paletteBlue" class="color"></div>
