--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="tittle"></h1>
+    <h1 id="tittle">Paleta de Cores</h1>
     <script src="script.js"></script>
 </body>
 </html>
