requisito 4 - criado quadro de pixels com 25 pixels

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
         <div class="color red"> </div>
     </section>
 
+    <section id="pixel-board">
 
+    </section>
+
+<script src="/script.js"></script>
 </body>
 
 </html>
