--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
   </head>
   <body>
     <h1 id="title">Paleta de Cores</h1>
-    <p>Preto</p>
-    <p>Roxo</p>
+    <!-- <button id='button1'>Amarelo</button> -->
     <p>Amarelo</p>
+    <!-- <button id='button2'>Roxo</button> -->
+    <p>Roxo</p>
+    <!-- <button id='button3'>Vermelho</button> -->
+    <p>Vermelho</p>
+    <!-- <button id='button4'>Verde</button> -->
     <p>Verde</p>
     <br />
     <div id="color-palette">
@@ -20,7 +24,43 @@
       <div class="color color3"></div>
       <div class="color color4"></div>
     </div>
-
+    <table id="pixel-board">
+      <tr>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+      </tr>
+      <tr>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+      </tr>
+      <tr>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+      </tr>
+      <tr>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+      </tr>
+      <tr>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+      </tr>
+    </table>
     <script type="text/javascript" href="script.js"></script>
   </body>
 </html>
