--- a/index.html
+++ b/index.html
@@ -4,49 +4,49 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Paleta de Cores</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <script type="text/javascript" src="script.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">  
 </head>
 <body>
   <header>
     <h1 id = "Title">Paleta de Cores</h1>
   </header>
   <div id="color-palette">
-    <div class="color selected" id="preto"></div>
-    <div class="color" id="vermelho"></div>
-    <div class="color" id="azul"></div>
-    <div class="color" id="verde"></div>
+    <div class='color selected' id='preto'></div>
+    <div class='color' id='vermelho'></div>
+    <div class='color' id='azul'></div>
+    <div class='color' id='verde'></div>
   </div>
   <div id="pixel-board">
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
+    <div class='pixel'></div>
+    <div class='pixel'></div>
+    <div class='pixel'></div>
+    <div class='pixel'></div>
+    <div class='pixel'></div>
 
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
+    <div class='pixel'></div>
+    <div class='pixel'></div>
+    <div class='pixel'></div>
+    <div class='pixel'></div>
+    <div class='pixel'></div>
 
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
+    <div class='pixel'></div>
+    <div class='pixel'></div>
+    <div class='pixel'></div>
+    <div class='pixel'></div>
+    <div class='pixel'></div>
 
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
+    <div class='pixel'></div>
+    <div class='pixel'></div>
+    <div class='pixel'></div>
+    <div class='pixel'></div>
+    <div class='pixel'></div>
 
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-    <div class="pixel"></div>
-</div>
+    <div class='pixel'></div>
+    <div class='pixel'></div>
+    <div class='pixel'></div>
+    <div class='pixel'></div>
+    <div class='pixel'></div>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
