add black color

--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="script.js"></script>
+  <h1 id="title">Paleta de Cores</h1>
+  <section>
+    <div id="color-palette">
+      <div class="color black" id="black"></div>
+      <div class="color red" id="red"></div>
+      <div class="color blue" id="blue"></div>
+      <div class="color green" id="green"></div>
+      <input type="color" id="buttonColor" class="paletaInput">
+    </div>
+  </section>
+
+  <button id="clear-board">Clear</button>
+  <div id="pixel-board"></div>
+  <p>Type a number of  pixels per square that you want</p>
+  <input type="number" id="size">
+  <button id="enter">Enter</button>
+  
 </body>
+<script src="script.js"></script>
 </html>
