--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>Project Pixels Art</title>
 </head>
 <body>  
-  <header id="title">
-    <h1>Paleta de Cores</h1>
+  <header>
+    <h1 id="title">Paleta de Cores</h1>
   </header>
   <sectioin id="color-palette">
     <div class="color black"></div>
