--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
 </head>
 <body>
     <header>
-        <h1 id="title">Paleta de Cores</h1>
+        <h1 id="title">Paleta de Cores</h1>          
     </header>
+
+    <div id="color-palette">
+        <div id="line">
+            <div class="color"></div>
+            <div class="color"></div>
+            <div class="color"></div>
+            <div class="color"></div>
+        </div>
+    </div>
+            
     <script src="script.js"></script>
 </body>
 </html>
