--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <header><h1 id="title">  Paleta de Cores    </h1></header>
     <div id="color-palette">
-        <div class="color">cor vermelha </div>
-        <div class="color">cor azul </div>
-        <div class="color">cor verde </div>
-        <div class="color">cor violeta </div>
+        <div class="color" id="preto">cor preta </div>
+        <div class="color" id="vermelho">cor vermelha </div>
+        <div class="color" id="azul">cor azul </div>
+        <div class="color" id="lilas">cor violeta </div>
     </div>
 
 </body>
