--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <div class="color div3"></div>
         <div class="color div4"></div>
     </div>
+    <div id="pixel-board">
+
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
