--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>Paleta de Cores</title>
 </head>
 <body>
@@ -11,11 +12,11 @@
     <h1 id="title">Paleta de Cores</h1>
   </header>
   <table>
+    <tr id="color-palette"><td class="color black">preto</td><td class="color red">vermelho</td><td class="color blue">azul</td><td class="color green">verde</td></tr>
     <tr><td>1</td><td>2</td><td>3</td></tr>
     <tr><td>4</td><td>5</td><td>6</td></tr>
-    <tr>44</tr>
-    <tr>55</tr>
+    
   </table>
-  
+  <script src="script.js"></script>
 </body>
 </html>
