4-trocado class pela id

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
   <h1 id="title">Paleta de Cores</h1>
   <section id="color-palette">
-    <div class="color"></div>
+    <div class="color selected"></div>
     <div class="color"></div>
     <div class="color"></div>
     <div class="color"></div>
   </section>
-  <div class="pixel-board">
+  <div id="pixel-board">
     <div>
       <div class="pixel"></div>
       <div class="pixel"></div>
