--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main class="container">
       <section id="color-palette">
         <h1 id="title">Paleta de Cores</h1>
-        <div class="color" id="black"></div>
+        <div class="color selected" id="black"></div>
         <div class="color" id="orangered"></div>
         <div class="color" id="green"></div>
         <div class="color" id="blue"></div>
