requisto 4 e tvz 5 arrumados

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1 id="title">Paleta de Cores</h1>
-    <!-- <button id='button1'>Amarelo</button> -->
+    <button id='button1'>Amarelo</button>
     <p>Amarelo</p>
     <!-- <button id='button2'>Roxo</button> -->
     <p>Roxo</p>
