--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +7,12 @@
     <title>Arte com Pixels!</title>
 </head>
 <body>
-    <div>
+    <div id="color-palette">
         <h1 id="title">Paleta de Cores</h1>
+        <div class="color" id="black"></div>
+        <div class="color" id="green"></div>
+        <div class="color" id="blue"></div>
+        <div class="color" id="orange"></div>
     </div>
 <script src="script.js" type="text/javascript" charset="utf-8"></script>
 </body>
