--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +8,42 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
-    <h1 id="title">Paleta de Cores</h1>
+    <h1 id="title"> Paleta de Cores </h1>
     <section id="color-palette">
         <div class="color" id="black"></div>
         <div class="color" id="red"></div>
         <div class="color" id="blue"></div>
         <div class="color" id="green"></div>
     </section>
+    <section id="pixel-board">
+        <div class="pixel" id="pixeltable"></div>
+        <div class="pixel" id="pixelalign"></div>
+        <div class="pixel" id="pixelalign"></div>
+        <div class="pixel" id="pixelalign"></div>
+        <div class="pixel" id="pixelalign"></div>
+        <div class="pixel" id="pixelalign"></div>
+        <div id="pixeltable"></div>
+        <div class="pixel" id="pixelalign"></div>
+        <div class="pixel" id="pixelalign"></div>
+        <div class="pixel" id="pixelalign"></div>
+        <div class="pixel" id="pixelalign"></div>
+        <div class="pixel" id="pixelalign"></div>
+        <div id="pixeltable"></div>
+        <div class="pixel" id="pixelalign"></div>
+        <div class="pixel" id="pixelalign"></div>
+        <div class="pixel" id="pixelalign"></div>
+        <div class="pixel" id="pixelalign"></div>
+        <div class="pixel" id="pixelalign"></div>
+        <div id="pixeltable"></div>
+        <div class="pixel" id="pixelalign"></div>
+        <div class="pixel" id="pixelalign"></div>
+        <div class="pixel" id="pixelalign"></div>
+        <div class="pixel" id="pixelalign"></div>
+        <div class="pixel" id="pixelalign"></div>
+        <div class="pixel" id="pixeltable"></div>
+    </section>
 </body>
+
 </html>
