--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <h1 id="title">Paleta de Cores</h1>
 
     <section id="color-palette">
-        <div class="color black "> </div>
-        <div class="color blue "> </div>
-        <div class="color pink"> </div>
-        <div class="color red"> </div>
+        <div id="blackBox" class="color black selected"> </div>
+        <div id="blueBox" class="color blue "> </div>
+        <div id="pinkBox" class="color pink"> </div>
+        <div id="redBox" class="color red"> </div>
     </section>
 
     <section id="pixel-board">
