--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1 id="title">Paleta de Cores</h1>
+    <div class="paleta-container">
+        <ul id="color-palette"></ul>
+    </div>
 
 
 
