--- a/index.html
+++ b/index.html
@@ -8,12 +8,21 @@
 <title>Project Pixel Art</title>
     
 <!-- Head links -->
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="style.css">
 <script src="script.js"></script>
 </head>
 
 <body>
-    <h1 id='title'>'Paleta de Cores'</h1>;
+    <h1 id='title'>Paleta de Cores</h1>
+
+    <section id='color-palete'>
+        <div class='color' style= background-color:black>&nbsp</div>
+        <div class='color' style= background-color:red>&nbsp</div>
+        <div class='color' style= background-color:green>&nbsp</div>
+        <div class='color' style= background-color:blue>&nbsp</div>
+    </section>
+    
+
 </body>
 
 </html>
