--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,16 +8,57 @@
   <link rel="stylesheet" href="style.css">
   <title>Paleta de Cores</title>
 </head>
+
 <body>
   <header>
     <h1 id="title">Paleta de Cores</h1>
   </header>
   <table>
-    <tr id="color-palette"><td class="color black">preto</td><td class="color red">vermelho</td><td class="color blue">azul</td><td class="color green">verde</td></tr>
-    <tr><td>1</td><td>2</td><td>3</td></tr>
-    <tr><td>4</td><td>5</td><td>6</td></tr>
-    
+    <tr id="color-palette">
+      <td class="color black">preto</td>
+      <td class="color red">vermelho</td>
+      <td class="color blue">azul</td>
+      <td class="color green">verde</td>
+    </tr>
+  </table>
+  <table id="pixel-board">
+    <tr>
+      <td class=" pixels">1</td>
+      <td class=" pixels">2</td>
+      <td class=" pixels">3</td>
+      <td class=" pixels">4</td>
+      <td class=" pixels">5</td>
+    </tr>
+    <tr>
+      <td class=" pixels">6</td>
+      <td class=" pixels">7</td>
+      <td class=" pixels">8</td>
+      <td class=" pixels">9</td>
+      <td class=" pixels">10</td>
+    </tr>
+    <tr>
+      <td class=" pixels">11</td>
+      <td class=" pixels">12</td>
+      <td class=" pixels">13</td>
+      <td class=" pixels">14</td>
+      <td class=" pixels">15</td>
+    </tr>
+    <tr>
+      <td class=" pixels">16</td>
+      <td class=" pixels">17</td>
+      <td class=" pixels">18</td>
+      <td class=" pixels">19</td>
+      <td class=" pixels">20</td>
+    </tr>
+    <tr>
+      <td class=" pixels">21</td>
+      <td class=" pixels">22</td>
+      <td class=" pixels">23</td>
+      <td class=" pixels">24</td>
+      <td class=" pixels">25</td>
+    </tr>
   </table>
   <script src="script.js"></script>
 </body>
+
 </html>
