--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="black"></div>
         <div class="greenyellow"></div>
         <div class="blue"></div>
-        <div class="red"></div>        
+        <div class="orangered"></div>        
     </div>
     
     <div id="pixel-board">
