--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p>Verde</p>
     <br />
     <div id="color-palette">
-      <div class="color color1"></div>
+      <div class="color color1 selected"></div>
       <div class="color color2"></div>
       <div class="color color3"></div>
       <div class="color color4"></div>
