--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
   <h1 id="title">Paleta de Cores</h1>
   <div id="color-palette">
-    <div id="paletteBlack" class="color selected"></div>
+    <!-- <div id="paletteBlack" class="color selected"></div>
     <div id="paletteGreen" class="color"></div>
     <div id="paletteYellow" class="color"></div>
-    <div id="paletteBlue" class="color"></div>
+    <div id="paletteBlue" class="color"></div> -->
   </div>
   <table id="pixel-board">
   </table>
