--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <h1 id = "title">Paleta de Cores</h1>
   </header>
   <section id = "color-palette">
-    <div class = "color paletteOne "></div>
-    <div class = "color paletteTwo"></div>
-    <div class = "color paletteThree"></div>
-    <div class = "color paletteFour"></div>
+    <div id = "paletteOne" class = "color"></div>
+    <div id = "paletteTwo" class = "color"></div>
+    <div id = "paletteThree" class = "color"></div>
+    <div id = "paletteFour" class = "color"></div>
   </section>
   <div id = "pixel-board">
 
