--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
     <h1 id='title'>Paleta de Cores</h1>
 
     <section id='color-palete'>
-        <div class='color' style= background-color:black>&nbsp</div>
-        <div class='color' style= background-color:red>&nbsp</div>
-        <div class='color' style= background-color:green>&nbsp</div>
-        <div class='color' style= background-color:blue>&nbsp</div>
+        <div id='black' class='color'>&nbsp</div>
+        <div id='red' class='color'>&nbsp</div>
+        <div id='green' class='color'>&nbsp</div>
+        <div id='blue' class='color'>&nbsp</div>
     </section>
-    
 
 </body>
 
