--- a/index.html
+++ b/index.html
@@ -5,11 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1 id="title">Paleta de Cores</h1>
     </header>
-    
+    <div id="color-palette">
+        <table>
+            <tr id="black" class="color">
+                <td></td>
+            </tr>
+            <tr id="red" class="color">
+                <td></td>
+            </tr>
+            <tr id="blue" class="color">
+                <td></td>
+            </tr>
+            <tr id="green" class="color">
+                <td></td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
