--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <title>Arte com Pixels!</title>
 </head>
 <body>
-    <div id="color-palette">
+    <div id="palette">
         <h1 id="title">Paleta de Cores</h1>
-        <div class="color" id="black"></div>
-        <div class="color" id="green"></div>
-        <div class="color" id="blue"></div>
-        <div class="color" id="orange"></div>
+        <div id="color-palette">
+            <div class="color" id="black"></div>
+            <div class="color" id="green"></div>
+            <div class="color" id="blue"></div>
+            <div class="color" id="orange"></div>
+        </div>
     </div>
+    
 <script src="script.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
