--- a/index.html
+++ b/index.html
@@ -18,6 +18,44 @@
     <div class="color"></div>
   </div>
 
+  <table id="pixel-board">
+    <tr>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+        <td class="pixel"></td>
+    </tr>
+    <tr>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+    </tr>
+    <tr>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+    </tr>
+    <tr>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+    </tr>
+    <tr>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+      <td class="pixel"></td>
+    </tr>
+</table>
+
   <script src="script.js"></script>
 </body>
 </html>
