--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <h1 id="title">Paleta de Cores</h1>
     <section id="color-palette"></section>
 
+    <button id="clear-board">Limpar</button>
+
     <section id="pixel-board"></section>
   </body>
 </html>
