--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <h1 id="title">Paleta de Cores</h1>
 <body>
     <section>
+        <div id="color-palette">
+            <div class="color" id="black">Black</div>
+            <div class="color" id="blue">Blue</div>
+            <div class="color" id="green">Green</div>
+            <div class="color" id="red">Red</div>
+        </div>
 
     </section>
 </body>
