--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
         <header>
             <h1 id="title">Paleta de Cores</h1>
         </header>
+        <section id="color-palette">
+            <div class="color">Preto</div>
+            <div class="color">Vermelho</div>
+            <div class="color">Azul</div>
+            <div class="color">Verde</div>
+        </section>
     </main>
 </body>
 </html>
