--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Paleta de Cores</title>
 </head>
+
 <body>
     <h1 id="title">Paleta de Cores</h1>
 
@@ -14,10 +16,35 @@
         <div class="black"></div>
         <div class="greenyellow"></div>
         <div class="blue"></div>
-        <div class="orangered"></div>        
+        <div class="orangered"></div>
     </div>
-    
+
     <div id="pixel-board">
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+
+        <div class="pixel"></div>
         <div class="pixel"></div>
         <div class="pixel"></div>
         <div class="pixel"></div>
@@ -26,4 +53,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
