--- a/index.html
+++ b/index.html
@@ -11,10 +11,17 @@
 <body>
   <h1 id="title">Paleta de Cores</h1>
   <div id="color-palette">
-    <div class="color black"></div>
-    <div class="color red"></div>
-    <div class="color blue"></div>
-    <div class="color green"></div>
+    <div class="color" id="black-color"></div>
+    <div class="color" id="second-color"></div>
+    <div class="color" id="third-color"></div>
+    <div class="color" id="fourth-color"></div>
+  </div>
+  <div id="pixel-board">
+    <div class="pixel"></div>
+    <div class="pixel"></div>
+    <div class="pixel"></div>
+    <div class="pixel"></div>
+    <div class="pixel"></div>
   </div>
 </body>
 </html>
