--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
         <div id="color-palette">
             <div class="color" id="black">
             </div> 
-            <div class="color">
+            <div class="color" id="">
             </div>
             <div class="color">
             </div>
             <div class="color">
             </div>
         </div>
+        <table id="pixel-board">
+
+        </table>
     </main>
 
 
