--- a/index.html
+++ b/index.html
@@ -23,39 +23,39 @@
   </table>
   <table id="pixel-board">
     <tr>
-      <td class=" pixels">1</td>
-      <td class=" pixels">2</td>
-      <td class=" pixels">3</td>
-      <td class=" pixels">4</td>
-      <td class=" pixels">5</td>
+      <td class="pixel">1</td>
+      <td class="pixel">2</td>
+      <td class="pixel">3</td>
+      <td class="pixel">4</td>
+      <td class="pixel">5</td>
     </tr>
     <tr>
-      <td class=" pixels">6</td>
-      <td class=" pixels">7</td>
-      <td class=" pixels">8</td>
-      <td class=" pixels">9</td>
-      <td class=" pixels">10</td>
+      <td class="pixel">6</td>
+      <td class="pixel">7</td>
+      <td class="pixel">8</td>
+      <td class="pixel">9</td>
+      <td class="pixel">10</td>
     </tr>
     <tr>
-      <td class=" pixels">11</td>
-      <td class=" pixels">12</td>
-      <td class=" pixels">13</td>
-      <td class=" pixels">14</td>
-      <td class=" pixels">15</td>
+      <td class="pixel">11</td>
+      <td class="pixel">12</td>
+      <td class="pixel">13</td>
+      <td class="pixel">14</td>
+      <td class="pixel">15</td>
     </tr>
     <tr>
-      <td class=" pixels">16</td>
-      <td class=" pixels">17</td>
-      <td class=" pixels">18</td>
-      <td class=" pixels">19</td>
-      <td class=" pixels">20</td>
+      <td class="pixel">16</td>
+      <td class="pixel">17</td>
+      <td class="pixel">18</td>
+      <td class="pixel">19</td>
+      <td class="pixel">20</td>
     </tr>
     <tr>
-      <td class=" pixels">21</td>
-      <td class=" pixels">22</td>
-      <td class=" pixels">23</td>
-      <td class=" pixels">24</td>
-      <td class=" pixels">25</td>
+      <td class="pixel">21</td>
+      <td class="pixel">22</td>
+      <td class="pixel">23</td>
+      <td class="pixel">24</td>
+      <td class="pixel">25</td>
     </tr>
   </table>
   <script src="script.js"></script>
