--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             <div id="paleta4" class="color"></div>
     </div>
     
+    <div id="pixel-board">
+        <!-- <div class="pixel"></div> -->
+    </div>
+
     <script src="script.js"></script>   
 </body>
 </html>
