--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   </header>
   <main>
     <section id = color-palette>
-      <div classe = color>blue</div>
-      <div classe = color>pink</div>
-      <div classe = color>red</div>
-      <div classe = color>green</div>
+      <span class = 'color' id = blue> --- </span>
+      <span class = 'color' id = pink> --- </span>
+      <span class = 'color' id = red> --- </span>
+      <span class = 'color' id = green> --- </span>
 
     </section>
     
@@ -25,5 +25,6 @@
   <footer>
 
   </footer>
+  <script src=""></script>
 </body>
 </html>
