--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <main>
         <div id="color-palette">
-            <div class="color" id="black">
+            <div class="color selected" id="black">
             </div> 
             <div class="color" id="">
             </div>
