--- a/index.html
+++ b/index.html
@@ -5,10 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pixels Art</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <h1 id="title">Paleta de Cores</h1>
     </header>
+    <section id="color-palette">
+        <table>
+            <thead>
+                <tr>
+                    <th class="color"></th>
+                    <th class="color"></th>
+                    <th class="color"></th>
+                    <th class="color"></th>
+                    <th class="color"></th>
+                </tr>
+            </thead>
+        </table>
+    </section>
+    <script src="script.js"></script>
 </body>
 </html>
