--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <div class="color"></div>
         <div class="color"></div>
     </div>
+
+    <button id='clear-board'>Limpar</button>
    
     <script src="script.js"></script>
 </body>
