Resolução do quarto requisito

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
+
 <body>
   <header>
     <h1 id="title">Paleta de Cores</h1>
@@ -19,6 +21,47 @@
       <div id="green" class="color"></div>
     </div>
   </section>
-  
+  <br>
+  <section>
+    <div id="pixel-board">
+      <div>
+        <div id="" class="pixel"></div>
+        <div id="" class="pixel"></div>
+        <div id="" class="pixel"></div>
+        <div id="" class="pixel"></div>
+        <div id="" class="pixel"></div>
+      </div>
+      <div>
+        <div id="" class="pixel"></div>
+        <div id="" class="pixel"></div>
+        <div id="" class="pixel"></div>
+        <div id="" class="pixel"></div>
+        <div id="" class="pixel"></div>
+      </div>
+      <div>
+        <div id="" class="pixel"></div>
+        <div id="" class="pixel"></div>
+        <div id="" class="pixel"></div>
+        <div id="" class="pixel"></div>
+        <div id="" class="pixel"></div>
+      </div>
+      <div>
+        <div id="ck" class="pixel"></div>
+        <div id="e" class="pixel"></div>
+        <div id="" class="pixel"></div>
+        <div id="en" class="pixel"></div>
+        <div id="en" class="pixel"></div>
+      </div>
+      <div>
+        <div id="" class="pixel"></div>
+        <div id="" class="pixel"></div>
+        <div id="" class="pixel"></div>
+        <div id="" class="pixel"></div>
+        <div id="" class="pixel"></div>
+      </div>
+    </div>
+  </section>
+
 </body>
+
 </html>
