Adicionando Paleta de Cores

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <header>
     <h1 id="title">Paleta de Cores</h1>
   </header>
+  <table id="color-palette"> <!--Adicionar as linhas e colunas com className="color"-->
+  </table>
   
   <script src="script.js"></script>
 </body>
