--- a/index.html
+++ b/index.html
@@ -22,6 +22,44 @@
         <div id='blue' class='color'>&nbsp</div>
     </section>
 
+    <table id='pixel-board  '>
+        <tr>
+            <th class='pixel'>&nbsp</th>
+            <th class='pixel'>&nbsp</th>
+            <th class='pixel'>&nbsp</th>
+            <th class='pixel'>&nbsp</th>
+            <th class='pixel'>&nbsp</th>
+        </tr>
+        <tr>
+            <th class='pixel'>&nbsp</th>
+            <th class='pixel'>&nbsp</th>
+            <th class='pixel'>&nbsp</th>
+            <th class='pixel'>&nbsp</th>
+            <th class='pixel'>&nbsp</th>
+        </tr>
+        <tr>
+            <th class='pixel'>&nbsp</th>
+            <th class='pixel'>&nbsp</th>
+            <th class='pixel'>&nbsp</th>
+            <th class='pixel'>&nbsp</th>
+            <th class='pixel'>&nbsp</th>
+        </tr>
+        <tr>
+            <th class='pixel'>&nbsp</th>
+            <th class='pixel'>&nbsp</th>
+            <th class='pixel'>&nbsp</th>
+            <th class='pixel'>&nbsp</th>
+            <th class='pixel'>&nbsp</th>
+        </tr>
+        <tr>
+            <th class='pixel'>&nbsp</th>
+            <th class='pixel'>&nbsp</th>
+            <th class='pixel'>&nbsp</th>
+            <th class='pixel'>&nbsp</th>
+            <th class='pixel'>&nbsp</th>
+        </tr>
+    </table>
+
 </body>
 
 </html>
