adicionar paleta de cores distintas

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <h1 id="title"> Paleta de Cores</h1>
 </header>
 <body>
-    
+    <div id='color-palette'>
+        <div class ='tr'>
+
+            <div id="paleta1" class="color"></div>
+            <div id="paleta2" class="color"></div>
+            <div id="paleta3" class="color"></div>
+            <div id="paleta4" class="color"></div>
+
+        </div id="">
+
+    </div>
 </body>
 </html>
