--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
   <h1 id="title">Paleta de Cores</h1>
   <section id="color-palette">
-    <div class="color selected"></div>
-    <div class="color"></div>
-    <div class="color"></div>
-    <div class="color"></div>
+    <div class="color selected">a</div>
+    <div class="color">s</div>
+    <div class="color">d</div>
+    <div class="color">f</div>
   </section>
   <div id="pixel-board">
     <div>
