--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 </head>
 
 <body>
+    <!-- Requisito 01 - Ok -->
     <h1 id="title">Paleta de Cores</h1>
 
+    <!-- Requisito 02 -->
     <div id="color-palette">
-        <div class="black"></div>
-        <div class="greenyellow"></div>
-        <div class="blue"></div>
-        <div class="orangered"></div>
+        <div class="color" id="black"></div>
+        <div class="color" id="greenyellow"></div>
+        <div class="color" id="blue"></div>
+        <div class="color" id="orangered"></div>
     </div>
 
     <div id="pixel-board">
