--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <body>
     <h1 id="title">Paleta de Cores</h1>
     <section id="color-palette"></section>
+    
+    <input id="board-size" type="number">
+    <button id="generate-board">VQV</button>
 
     <button id="clear-board">Limpar</button>
 
