--- a/index.html
+++ b/index.html
@@ -7,15 +7,13 @@
   <link rel="stylesheet" type="text/css" href="style.css">  
 </head>
 <body>
-  <header>
-    <h1 id = "Title">Paleta de Cores</h1>
-  </header>
+  <h1 id = "Title">Paleta de Cores</h1>
   <div id="color-palette">
-    <div class='color selected' id='preto'></div>
-    <div class='color' id='vermelho'></div>
-    <div class='color' id='azul'></div>
-    <div class='color' id='verde'></div>
-  </div>
+    <div class="color selected" id="preto"></div>
+    <div class="color" id="vermelho"></div>
+    <div class="color" id="azul"></div>
+    <div class="color" id="verde"></div>  
+</div>
   <div id="pixel-board">
     <div class='pixel'></div>
     <div class='pixel'></div>
