--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <header>
         <h1 id='title'>Paleta de Cores</h1>
     </header>
+    <section>
+        <div id='color-palette'>
+        </div>
+    </section>
+    <script src="script.js"></script>
 </body>
 
 </html>
