--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 <body>
   <h1 id="title">Paleta de Cores</h1>
 
-  <div id="color-palette">
-  </div>
+  <div id="color-palette"></div>
+
+  <div id="pixel-board"></div>
+
 
 
 
