--- a/index.html
+++ b/index.html
@@ -18,31 +18,29 @@
         <div class="color" id="green"></div>
     </section>
     <section id="pixel-board">
-        <div class="pixel" id="pixeltable"></div>
-        <div class="pixel" id="pixelalign"></div>
-        <div class="pixel" id="pixelalign"></div>
-        <div class="pixel" id="pixelalign"></div>
-        <div class="pixel" id="pixelalign"></div>
-        <div class="pixel" id="pixelalign"></div>
-        <div id="pixeltable"></div>
-        <div class="pixel" id="pixelalign"></div>
-        <div class="pixel" id="pixelalign"></div>
-        <div class="pixel" id="pixelalign"></div>
-        <div class="pixel" id="pixelalign"></div>
-        <div class="pixel" id="pixelalign"></div>
-        <div id="pixeltable"></div>
-        <div class="pixel" id="pixelalign"></div>
-        <div class="pixel" id="pixelalign"></div>
-        <div class="pixel" id="pixelalign"></div>
-        <div class="pixel" id="pixelalign"></div>
-        <div class="pixel" id="pixelalign"></div>
-        <div id="pixeltable"></div>
-        <div class="pixel" id="pixelalign"></div>
-        <div class="pixel" id="pixelalign"></div>
-        <div class="pixel" id="pixelalign"></div>
-        <div class="pixel" id="pixelalign"></div>
-        <div class="pixel" id="pixelalign"></div>
-        <div class="pixel" id="pixeltable"></div>
+        <div class="pixel pixelalign"></div>
+        <div class="pixel pixelalign"></div>
+        <div class="pixel pixelalign"></div>
+        <div class="pixel pixelalign"></div>
+        <div class="pixel pixelalign"></div>
+        <div class="pixeltable"></div>
+        <div class="pixel pixelalign"></div>
+        <div class="pixel pixelalign"></div>
+        <div class="pixel pixelalign"></div>
+        <div class="pixel pixelalign"></div>
+        <div class="pixel pixelalign"></div>
+        <div class="pixeltable"></div>
+        <div class="pixel pixelalign"></div>
+        <div class="pixel pixelalign"></div>
+        <div class="pixel pixelalign"></div>
+        <div class="pixel pixelalign"></div>
+        <div class="pixel pixelalign"></div>
+        <div class="pixeltable"></div>
+        <div class="pixel pixelalign"></div>
+        <div class="pixel pixelalign"></div>
+        <div class="pixel pixelalign"></div>
+        <div class="pixel pixelalign"></div>
+        <div class="pixel pixelalign"></div>
     </section>
 </body>
 
