preseguindo depois da 6

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <h1 id="title">Paleta de Cores</h1>
     <div id="color-palette">
-        <div class="color div1"></div>
-        <div class="color div2"></div>
-        <div class="color div3"></div>
-        <div class="color div4"></div>
+        <div class="color div1" onclick="pintarQuadrado()"></div>
+        <div class="color div2" onclick="pintarQuadrado()"></div>
+        <div class="color div3" onclick="pintarQuadrado()"></div>
+        <div class="color div4" onclick="pintarQuadrado()"></div>
     </div>
     <div id="pixel-board">
 
