--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" type="text/css" href="style.css">  
 </head>
 <body>
-  <h1 id = "Title">Paleta de Cores</h1>
+  <header>
+    <h1 id="title">Paleta de Cores</h1>
+  </header>
   <div id="color-palette">
     <div class="color selected" id="preto"></div>
     <div class="color" id="vermelho"></div>
