--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div id="paletteYellow" class="color"></div>
     <div id="paletteBlue" class="color"></div> -->
   </div>
+  <button id="clear-board">Limpar</button>
   <table id="pixel-board">
   </table>
   <script src="script.js"></script>
