--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <h1 id='title'>Paleta de Cores</h1>
     </header>
     <section>
-        <div id='color-palette'>
-        </div>
+        <div id='color-palette'></div>
+        <div id="pixel-board"></div>
     </section>
     <script src="script.js"></script>
 </body>
