--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1 id="title">Paleta de Cores</h1>
     <section id="color-palette"></section>
     
-    <input id="board-size" type="number">
+    <input id="board-size" type="number" min="5" max="50">
     <button id="generate-board">VQV</button>
 
     <button id="clear-board">Limpar</button>
