--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="title"></h1>
+    <header>
+        <h1 id="title"></h1>
+    </header>
+
+    <section>
+        <div id="color-palette"></div>
+    </section>
+
     <script src="script.js"></script>
 </body>
 </html>
